--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,1 +1,28 @@
 img { width: 150px; }
+
+.form-control { padding: 2px 5px; height: inherit;}
+
+form > .btn { padding: 2px 5px; }
+
+.pagination {position: relative; bottom: 0.4em;font-size: 2em;padding: 1em; padding-bottom: 1px;padding-top: 1px;}
+
+.loggedInForm { margin: 0; }
+
+.loggedInForm button { margin-left: 1em;}
+
+nav form#mlogin input.form-control { padding:0; height: inherit;}
+
+nav form#mlogin .btn { padding-top: 0; padding-bottom: 0;}
+
+#searchIcon { position: absolute; top:5px; right: 10px;}
+#searchBox { position: relative;}
+
+.modal-title { color: blue;}
+
+.fade.in { opacity:1; display:block; overflow-x: hidden;overflow-y: auto;}
+.fade.out { display:none;}
+
+.modal-dialog .container-fluid {
+    padding-right: 0px; 
+    padding-left: 0px; 
+}
