--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -4,8 +4,8 @@
 <div class="row">        
     <div class="col-md-4 " >
         <h1>Our Locations</h1>
-        <select ngModel = 'selectedMap' (change)="onChange($event)">
-			<option *ngFor="let map of Maps" ngValue="map">{{map.address}}</option>
+        <select [(ngModel)] = 'selectedMap' (change)="onChange($event)">
+			<option *ngFor="let map of Maps" [value]="map">{{map.address}}</option>
         </select>
     </div>
     <div class="col-md-4" >
