fix details screen

--- a/src/app/movie-detail/movie-detail.component.html
+++ b/src/app/movie-detail/movie-detail.component.html
@@ -4,10 +4,13 @@
       <div class="col-md-3">
         <img src={{movie.poster_path}} class='img-responsive'> 
 		<br/>
-          <a *ngIf= 'searchString' [routerLink]="['/movies',category,searchString]" ><button class="btn btn-primary">Return Movies</button></a>
-		  <a *ngIf= '!searchString' [routerLink]="['/movies',category]" ><button class="btn btn-primary">Return Movies</button></a>
-         <button class='btn btn-danger' ngModel='trailer' (click)="showTrailer()" *ngIf='trailer'>Show Trailer</button>
-         
+          <a *ngIf= 'searchString' [routerLink]="['/movies',category,searchString]"  >
+		  <button class="btn btn-primary">Return Movies</button></a>
+		  <a *ngIf= '!searchString' then [routerLink]="['/movies',category]" >
+		  <button class="btn btn-primary">Return Movies</button></a>
+ 
+          <!--<button class='btn btn-danger' ngModel='trailer' (click)="showTrailer()" *ngIf='trailer'>Show Trailer</button>
+         -->
       </div>
       <div  class="col-md-7">
         <h1 class="">{{movie.title}}</h1>
