fixed details screen

--- a/src/app/movie-detail/movie-detail.component.html
+++ b/src/app/movie-detail/movie-detail.component.html
@@ -27,9 +27,9 @@
           <div class='col-md-9'>
             <p>Released: {{movie.release_date | date: 'mediumDate'}}  </p>
           </div>
-          <div class='col-md-3'>
+ <!--         <div class='col-md-3'>
             <button class='btn btn-success'  *ngIf='showFav' (click)="addFavourite()" >Add Favourite</button>
-          </div>          
+          </div>      -->    
         </section>
  
       </div> 
