--- a/src/app/movie-detail/movie-detail.component.html
+++ b/src/app/movie-detail/movie-detail.component.html
@@ -1,8 +1,8 @@
-<div class='container'>
+<div class="container">
     <h1>{{title}}</h1>
-    <div class='row'>          
+    <div class="row">          
       <div class="col-md-3">
-        <img src={{movie.poster_path}} class='img-responsive'> 
+        <img bind-src="movie.poster" class='img-responsive' /> 
 		<br/>
           <a *ngIf= 'searchString' [routerLink]="['/movies',category,searchString]"  >
 		  <button class="btn btn-primary">Return Movies</button></a>
