added movie trailers

--- a/src/app/movie-detail/movie-detail.component.css
+++ b/src/app/movie-detail/movie-detail.component.css
@@ -1,1 +1,13 @@
 p { color: silver; font-size: 1.2em }
+.fade.in {
+    opacity: 1;
+    display: block;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+.fade.out {
+    display: none;
+}
+.modal-title {
+    color: blue;
+}
