--- a/src/app/movie-detail/movie-detail.component.html
+++ b/src/app/movie-detail/movie-detail.component.html
@@ -9,8 +9,8 @@
 		  <a *ngIf= '!searchString' then [routerLink]="['/movies',category]" >
 		  <button class="btn btn-primary">Return Movies</button></a>
  
-          <!--<button class='btn btn-danger' ngModel='trailer' (click)="showTrailer()" *ngIf='trailer'>Show Trailer</button>
-         -->
+          <button class='btn btn-danger' (click)="showTrailer()" *ngIf='trailer'>Show Trailer</button>
+         
       </div>
       <div  class="col-md-7">
         <h1 class="">{{movie.title}}</h1>
@@ -37,3 +37,25 @@
     
 </div>
 <!-- <movie-trailer trailer-src="trailerSrc" fade-in="fadeIn"><movie-trailer> -->
+<section id="myModal" class="modal fade {{fadeIn}}">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" (click)="closeModal()" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">Movie Trailer</h4>
+            </div>
+            <div class="modal-body">
+              <div class='container-fluid'>
+                <div class="row">                   
+                   <div class="col-md-12">
+                  <iframe  [src]="trailerSrc" width="560" height='315' allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" frameborder="no" scrolling="no" autoplay="false"></iframe>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" (click)="closeModal()">Close</button>               
+            </div>
+        </div>
+    </div>
+</section>
