--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -26,3 +26,25 @@ nav form#mlogin .btn { padding-top: 0; padding-bottom: 0;}
     padding-right: 0px; 
     padding-left: 0px; 
 }
+.has-danger .form-control {
+    border-color: red;
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+	}
+.alert {
+    background: #f2edda;
+    padding: 7px;
+    font-size: .9em;
+    margin-bottom: 20px;
+    display: inline-block;
+    animation: 2s alertAnim forwards;
+}
+@keyframes alertAnim {
+    from {
+        opacity:0;
+        transform: translateY(-20px);
+    }
+    to {
+        opacity:1;
+        transform: translateY(0);
+    }
+}
